--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
     "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["second-brain", "api", "backend"],
+  "keywords": [
+    "second-brain",
+    "api",
+    "backend"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "mongoose": "^8.8.4",
-    "jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "zod": "^3.24.1",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "express": "^4.21.2",
+    "google-auth-library": "^10.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.2",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.7.2",
-    "ts-node": "^10.9.2"
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
